k8s/base/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: demo-apps
spec:
  type: ClusterIP
  selector:
    app: nginx-test
  ports:
    - port: 80
      targetPort: 80
